--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,98 +1,90 @@
 trigger:
-  branches:
-    include:
-      - main
+- main
 
 pool:
   vmImage: 'ubuntu-latest'
 
 variables:
-  REPORT_FILE_PATH: "junit-report.xml"
-  MAX_WAIT_TIME_FOR_SCRIPT_TO_EXIT: "180"
+  # This points to the folder where source code is checked out
+  reportPath: '$(System.DefaultWorkingDirectory)/junit-report.xml'
 
-jobs:
-- job: TestAndRelease
-  displayName: 'Testsigma Run and Release'
-  steps:
-  - checkout: self
-    persistCredentials: true
+steps:
+# 1. RUN THE POWERSHELL SCRIPT
+- task: PowerShell@2
+  displayName: 'Run Testsigma Script'
+  inputs:
+    filePath: 'testsigma_cicd.ps1' # Ensure this file is in your repo root
+    pwsh: true # Use PowerShell Core
+  env:
+    # Map the Azure Secret Variable to the Script Env Variable
+    TESTSIGMA_API_KEY: $(TESTSIGMA_API_KEY) 
+    REPORT_FILE_PATH: $(reportPath)
+    MAX_WAIT_TIME_FOR_SCRIPT_TO_EXIT: "180" # 180 Minutes
 
-  # 1. Run the Testsigma PowerShell Script
-  - task: PowerShell@2
-    displayName: 'Run Testsigma Script'
-    env:
-      TESTSIGMA_API_KEY: $(TESTSIGMA_API_KEY)
-    inputs:
-      targetType: 'filePath'
-      filePath: './testsigma_cicd.ps1'
+# 2. PARSE REPORT AND SET STATUS VARIABLE
+- task: PowerShell@2
+  displayName: 'Determine Status'
+  inputs:
+    targetType: 'inline'
+    pwsh: true
+    script: |
+      $xmlPath = "$(reportPath)"
+      $finalStatus = "UNKNOWN"
 
-  # 2. Determine Status from JUnit Report
-  - task: PowerShell@2
-    displayName: 'Determine Status from Report'
-    name: status_check
-    inputs:
-      targetType: 'inline'
-      script: |
-        $reportPath = "$(REPORT_FILE_PATH)"
-        $finalStatus = "UNKNOWN"
+      if (Test-Path $xmlPath) {
+        [xml]$xml = Get-Content $xmlPath
+        $failures = 0
+        $errors = 0
 
-        if (Test-Path $reportPath) {
-            [xml]$xml = Get-Content $reportPath
-            $failures = 0
-            $errors = 0
-
-            if ($xml.testsuites.testsuite) {
-                foreach ($suite in $xml.testsuites.testsuite) {
-                    $failures += [int]$suite.failures
-                    $errors += [int]$suite.errors
-                }
-            } elseif ($xml.testsuite) {
-                $failures += [int]$xml.testsuite.failures
-                $errors += [int]$xml.testsuite.errors
+        # Handle multiple testsuites
+        if ($xml.testsuites.testsuite) {
+            foreach ($suite in $xml.testsuites.testsuite) {
+                $failures += [int]$suite.failures
+                $errors += [int]$suite.errors
             }
-
-            Write-Host "Total Failures: $failures"
-            Write-Host "Total Errors: $errors"
-
-            if ($failures -eq 0 -and $errors -eq 0) {
-                $finalStatus = "PASSED"
-            } else {
-                $finalStatus = "FAILED"
-            }
-        } else {
-            Write-Warning "JUnit report not found."
-            $finalStatus = "TIMEOUT"
+        } 
+        # Handle single testsuite
+        elseif ($xml.testsuite) {
+            $failures += [int]$xml.testsuite.failures
+            $errors += [int]$xml.testsuite.errors
         }
 
-        Write-Host "##vso[task.setvariable variable=result;isOutput=true]$finalStatus"
-        Write-Host "Final Status: $finalStatus"
+        Write-Host "Total Failures: $failures, Total Errors: $errors"
 
-  # 3. Publish Test Results
-  - task: PublishTestResults@2
-    displayName: 'Publish JUnit Test Results'
-    condition: succeededOrFailed()
-    inputs:
-      testResultsFormat: 'JUnit'
-      testResultsFiles: '$(REPORT_FILE_PATH)'
-      testRunTitle: 'Testsigma Automated Tests'
+        if ($failures -eq 0 -and $errors -eq 0) {
+          $finalStatus = "PASSED"
+        } else {
+          $finalStatus = "FAILED"
+        }
+      } else {
+        Write-Warning "Report file not found. Script might have timed out."
+        $finalStatus = "TIMEOUT"
+      }
+      
+      Write-Host "Final Status determined: $finalStatus"
+      
+      # This command sets a variable available to future steps in Azure DevOps
+      Write-Host "##vso[task.setvariable variable=ExecutionResult]$finalStatus"
 
-  # 4. Create GitHub Release
-  - task: GitHubRelease@1
-    displayName: 'Create GitHub Release'
-    condition: always()
-    inputs:
-      gitHubConnection: 'Arthy'
-      repositoryName: '$(Build.Repository.Name)'
-      action: 'create'
-      target: '$(Build.SourceVersion)'
-      tagSource: 'manual'
-      tag: 'build-$(Build.BuildId)'
-      title: 'Test Status $(status_check.result)'
-      releaseNotesSource: 'inline'
-      inlineReleaseNotes: |
-        ### Automated Test Execution
-        **Result:** $(status_check.result)
-        **Test Plan ID:** 2493
-
-        _This release was automatically generated based on Testsigma execution._
-      addChangeLog: true
+# 3. CREATE GITHUB RELEASE
+- task: GitHubRelease@1
+  displayName: 'Create GitHub Release'
+  condition: always() # Run even if the tests failed
+  inputs:
+    gitHubConnection: 'GitHubConnection' # MUST match the name in Project Settings -> Service Connections
+    repositoryName: '$(Build.Repository.Name)'
+    action: 'create'
+    target: '$(Build.SourceVersion)'
+    tagSource: 'userSpecifiedTag'
+    tag: 'build-$(Build.BuildId)'
+    title: 'Test Status $(ExecutionResult)'
+    releaseNotesSource: 'inline'
+    releaseNotesInline: |
+      ### Automated Test Execution
+      **Result:** $(ExecutionResult)
+      
+      **Test Plan ID:** 2493
+      **Azure Build ID:** $(Build.BuildId)
+      
+      _This release was automatically generated via Azure DevOps._
+    assets: '$(reportPath)' # Optional: Attaches the XML report to the release
