--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -26,7 +26,7 @@ steps:
   displayName: 'Determine Status'
   inputs:
     targetType: 'inline'
-    pwsh: true
+    pwsh: false
     script: |
       $xmlPath = "$(reportPath)"
       $finalStatus = "UNKNOWN"
